--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "strukt/framework": "v1.1.7-alpha",
         "popphp/pop-db": "^5.4",
         "gabordemooij/redbean": "dev-master",
-        "symfony/string": "6.4.x-dev"
+        "symfony/string": "6.4.x-dev",
+        "monolog/monolog":"*"
     },
     "require-dev": {
         "strukt/framework": "dev-master"
