--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
         "strukt/framework": "v1.1.7-alpha",
         "popphp/pop-db": "^5.4",
         "gabordemooij/redbean": "dev-master",
-        "fakerphp/faker": "v1.23.2",
         "symfony/string": "6.4.x-dev",
-        "monolog/monolog":"*"
+        "monolog/monolog":"*",
+        "fakerphp/faker":"*"
     },
     "require-dev": {
         "strukt/framework": "dev-master"
