added db:feed command + seed data for auth + seed bin files + updated cfg/db.ini with sample sqlite file as starter db config

--- a/package/cfg/db.ini
+++ b/package/cfg/db.ini
@@ -1,5 +1,7 @@
-name = test
-username = test
-password = p@55w0rd
-host     = 127.0.0.1
-type     = mysql
+; name = test
+; username = test
+; password = p@55w0rd
+; host     = 127.0.0.1
+; type     = mysql
+
+file = payroll.sqlite
